added characters table

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<app-characters></app-characters>
+<div class="home-container">
+  <h1>Rick and Morty</h1>
+
+  <div class="characters-table-container">
+    <app-characters-table></app-characters-table>
+  </div>
+</div>
