--- a/src/app/pages/home/characters-table/characters-table.component.css
+++ b/src/app/pages/home/characters-table/characters-table.component.css
@@ -1,6 +1,7 @@
 .characters-table {
   width: 100%;
   border: 1px solid #889392;
+  background-color: #101414;
 }
 
 .mat-mdc-row .mat-mdc-cell {
@@ -24,11 +25,26 @@
 }
 
 .paginator-container {
-  width: 100%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  background-color: #101414;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.filters-container {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.filters-container {
+  flex: 1;
+  padding: 0 0.5rem;
+}
+
+.mat-mdc-form-field {
+  font-size: 1rem;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -41,5 +57,10 @@
     display: flex;
     flex: 5;
     justify-content: start;
+  }
+
+  .filters-container {
+    flex-direction: column;
+    max-width: 50%;
   }
 }
