--- a/src/styles.css
+++ b/src/styles.css
@@ -7,5 +7,6 @@ body {
 body {
   margin: 0;
   background-color: black;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  color: white;
 }
