--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -15,17 +15,23 @@
 
 .list-container {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  height: 10rem;
 }
 
 .list {
   list-style: none;
-  padding: 0;
+  padding: 0 2rem;
   margin: 0;
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
+  overflow: auto;
 }
 
 .list li {
@@ -62,4 +68,14 @@
 
 .server-status-link:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
 }
