--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,11 @@
 <div class="footer">
+  <a href="https://status.rickandmortyapi.com/" target="_blank" class="server-status-link">
+    <div class="server-status">
+      <p>Rick and Morty API Server Status</p>
+      <span class="status"></span>
+    </div>
+  </a>
+
   <div class="total-characters">
     <div class="list-container">
       <p>Total characters by Species</p>
@@ -17,10 +24,9 @@
       </ul>
     </div>
   </div>
-  <a href="https://status.rickandmortyapi.com/" target="_blank" class="server-status-link">
-    <div class="server-status">
-      <p>Server Status</p>
-      <span class="status"></span>
-    </div>
-  </a>
+
+  <div class="created-by">
+    <p>Example project using Rick and Morty API with Redux Pattern in Angular</p>
+    <p>Created by Matias Pascual</p>
+  </div>
 </div>
