--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,13 @@
-<div>Header</div>
+<div class="layout">
+  <div class="header">
+    <h1>Rick and Morty</h1>
+  </div>
 
-<div>
-  <!-- <router-outlet></router-outlet> -->
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+
+  <div class="footer-container">
+    <app-footer></app-footer>
+  </div>
 </div>
-
-<app-footer></app-footer>
