--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -1,8 +1,15 @@
 .footer {
-  background-color: #333;
+  background-color: #101414;
+  border: 1px solid #889392;
   color: white;
-  padding: 2rem;
   text-align: center;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .total-characters {
@@ -39,7 +46,6 @@
 }
 
 .server-status {
-  padding-top: 2rem;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -70,12 +76,7 @@
   text-decoration: underline;
 }
 
-@media (max-width: 768px) {
-  .list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-  }
+.created-by {
+  font-size: 0.8rem;
+  margin-top: 2rem;
 }
