--- a/src/app/pages/home/characters-table/characters-table.component.html
+++ b/src/app/pages/home/characters-table/characters-table.component.html
@@ -29,32 +29,32 @@
     </mat-form-field>
   </div>
 
-  <table mat-table [dataSource]="(characters$ | async) || []">
+  <table mat-table [dataSource]="(characters$ | async) || []" class="mat-elevation-z8">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let character">
+      <td mat-cell *matCellDef="let character" (click)="onCharacterClick(character)">
         {{ character.name }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef>Status</th>
-      <td mat-cell *matCellDef="let character">
-        {{ character.status }}
+      <td mat-cell *matCellDef="let character" (click)="onCharacterClick(character)">
+        <span [class]="character.status.toLowerCase()">{{ character.status }}</span>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="species">
       <th mat-header-cell *matHeaderCellDef>Species</th>
-      <td mat-cell *matCellDef="let character">
+      <td mat-cell *matCellDef="let character" (click)="onCharacterClick(character)">
         {{ character.species }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef>Type</th>
-      <td mat-cell *matCellDef="let character">
-        {{ character.type }}
+      <td mat-cell *matCellDef="let character" (click)="onCharacterClick(character)">
+        {{ character.type || 'Unknown' }}
       </td>
     </ng-container>
 
@@ -73,6 +73,6 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns" class="clickable-row"></tr>
   </table>
 </div>
