--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,9 +1,9 @@
 <div class="layout">
-  <div class="header">
-    <h1>Rick and Morty</h1>
+  <div class="header-container">
+    <app-header></app-header>
   </div>
 
-  <div class="content">
+  <div class="content-container">
     <router-outlet></router-outlet>
   </div>
 
