--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -8,19 +8,17 @@
   padding: 0;
 }
 
-.content {
+.content-container {
   padding: 0 2rem;
-  margin-top: 4rem;
 }
 
 .footer-container {
   margin-top: 1rem;
-  padding: 0 2rem;
   min-width: 670px;
 }
 
 @media (max-width: 768px) {
-  .content {
+  .content-container {
     padding: 0;
   }
 
