--- a/src/app/pages/home/characters-table/characters-table.component.html
+++ b/src/app/pages/home/characters-table/characters-table.component.html
@@ -1,78 +1,78 @@
-<div class="characters-table">
-  <div class="paginator-container">
-    <p class="page-info">Page: {{ (currentPage$ | async) || 1 }}</p>
-    <mat-paginator
-      class="paginator"
-      [length]="(info$ | async)?.count"
-      [pageSize]="20"
-      [pageIndex]="((currentPage$ | async) || 1) - 1"
-      (page)="onPageChange($event)"
-      [hidePageSize]="true"
-    >
-    </mat-paginator>
-  </div>
-
+<div class="table-container">
   <div class="filters-container">
     <mat-form-field>
-      <mat-label>Search by name</mat-label>
+      <mat-label>Filter by name</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Write a name" #input />
     </mat-form-field>
 
     <mat-form-field>
-      <mat-label>Search by status</mat-label>
+      <mat-label>Filter by status</mat-label>
       <mat-select (selectionChange)="applyStatusFilter($event.value)" [value]="statusFilter">
         <mat-option [value]="null">All</mat-option>
-        <mat-option [value]="CharacterStatus.Alive">Alive</mat-option>
-        <mat-option [value]="CharacterStatus.Dead">Dead</mat-option>
-        <mat-option [value]="CharacterStatus.Unknown">Unknown</mat-option>
+        <mat-option [value]="'Alive'">Alive</mat-option>
+        <mat-option [value]="'Dead'">Dead</mat-option>
+        <mat-option [value]="'unknown'">Unknown</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
 
-  <table mat-table [dataSource]="(characters$ | async) || []" class="mat-elevation-z8">
+  <table mat-table [dataSource]="(characters$ | async) ?? []" class="mat-elevation-z8">
+    <ng-container matColumnDef="favorite">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let character">
+        <ng-container *ngIf="favorites$ | async as favorites">
+          <mat-icon
+            class="favorite-icon"
+            [class.favorite]="isFavorite(character, favorites)"
+            (click)="toggleFavorite(character, isFavorite(character, favorites))"
+          >
+            {{ isFavorite(character, favorites) ? 'star' : 'star_border' }}
+          </mat-icon>
+        </ng-container>
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let character" (click)="onCharacterClick(character)">
-        {{ character.name }}
-      </td>
+      <td mat-cell *matCellDef="let character">{{ character.name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef>Status</th>
-      <td mat-cell *matCellDef="let character" (click)="onCharacterClick(character)">
+      <td mat-cell *matCellDef="let character">
         <span [class]="character.status.toLowerCase()">{{ character.status }}</span>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="species">
       <th mat-header-cell *matHeaderCellDef>Species</th>
-      <td mat-cell *matCellDef="let character" (click)="onCharacterClick(character)">
-        {{ character.species }}
-      </td>
+      <td mat-cell *matCellDef="let character">{{ character.species }}</td>
     </ng-container>
 
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef>Type</th>
-      <td mat-cell *matCellDef="let character" (click)="onCharacterClick(character)">
-        {{ character.type || 'Unknown' }}
-      </td>
+      <td mat-cell *matCellDef="let character">{{ character.type || 'Unknown' }}</td>
     </ng-container>
 
     <ng-container matColumnDef="gender">
       <th mat-header-cell *matHeaderCellDef>Gender</th>
-      <td mat-cell *matCellDef="let character">
-        {{ character.gender }}
-      </td>
+      <td mat-cell *matCellDef="let character">{{ character.gender }}</td>
     </ng-container>
 
     <ng-container matColumnDef="created">
       <th mat-header-cell *matHeaderCellDef>Created</th>
-      <td mat-cell *matCellDef="let character">
-        {{ character.created | date }}
-      </td>
+      <td mat-cell *matCellDef="let character">{{ character.created | date }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns" class="clickable-row"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+
+  <mat-paginator
+    [length]="(info$ | async)?.count || 0"
+    [pageSize]="20"
+    [pageSizeOptions]="[20]"
+    (page)="onPageChange($event)"
+    showFirstLastButtons
+  ></mat-paginator>
 </div>
