background image added

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,4 +1,5 @@
 <div class="layout">
+  <div class="background-container"></div>
   <div class="header-container">
     <app-header></app-header>
   </div>
