--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -2,10 +2,25 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: black;
   color: white;
   font-family: 'Roboto', sans-serif;
   padding: 0;
+  overflow: hidden;
+}
+
+.background-container {
+  position: absolute;
+  z-index: -10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 200%;
+  background-image: url('/assets/images/rick-and-morty-background.jpg');
+  background-size: 50% 50%;
+  background-position: center;
+  background-repeat: repeat;
+  opacity: 0.3;
+  filter: grayscale(100%) brightness(70%);
 }
 
 .content-container {
