--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="logo">
-    <h1>Rick and Morty</h1>
+    <img class="logo-image" src="assets/images/rick-and-morty-title.png" alt="Rick and Morty Logo" />
   </div>
   <div class="favorites">
     <select [(ngModel)]="selectedFavorite" (change)="onFavoriteSelect(selectedFavorite!)" class="favorites-select">
