--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+:root {
+  --primary-color: #c0dd4e;
+}
+
 html,
 body {
   height: 100%;
