--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -1,5 +1,4 @@
 .footer {
-  background-color: #101414;
   color: white;
   text-align: center;
   overflow: hidden;
@@ -8,6 +7,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-width: 670px;
+  margin: 0 auto;
 }
 
 .total-characters {
@@ -19,6 +20,7 @@
 }
 
 .list-container {
+  text-transform: uppercase;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -40,7 +42,7 @@
 }
 
 .list li {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
 .server-status {
@@ -75,6 +77,10 @@
 }
 
 .created-by {
-  font-size: 0.8rem;
+  font-variant: small-caps;
+  font-size: 0.9rem;
   margin-top: 2rem;
+  background-color: var(--primary-color);
+  color: black;
+  width: 100%;
 }
