--- a/src/app/pages/home/characters-table/characters-table.component.css
+++ b/src/app/pages/home/characters-table/characters-table.component.css
@@ -28,13 +28,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
 }
 
 .filters-container {
   display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: 1rem;
   overflow: hidden;
 }
 
@@ -70,8 +69,7 @@
   }
 
   .filters-container {
-    flex-direction: column;
-    max-width: 50%;
+    flex-direction: row;
   }
 }
 
