--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
-<div class="characters-table-container">
+<div class="characters-container">
+  <app-characters-detail></app-characters-detail>
   <app-characters-table></app-characters-table>
 </div>
