--- a/src/app/pages/home/characters-detail/characters-detail.component.css
+++ b/src/app/pages/home/characters-detail/characters-detail.component.css
@@ -4,11 +4,33 @@
   right: -1rem;
   min-height: 30rem;
   max-height: 50rem;
-  width: 40vw;
+  width: 30vw;
   z-index: 10;
   background-color: transparent;
   box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.5);
   border-radius: 8px;
+}
+
+.characters-detail-drawer-content {
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: start;
+}
+
+.characters-detail-drawer-image {
+  width: 20rem;
+  height: 20rem;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.characters-detail-drawer-info {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  padding: 1rem;
 }
 
 .characters-detail-drawer {
@@ -16,4 +38,17 @@
   padding: 1rem;
   width: 100%;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+}
+
+.characters-detail-drawer::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 99%;
+  height: 98%;
+  background-color: #333;
+  border-radius: 10px;
+  z-index: -1;
 }
