--- a/src/app/pages/home/characters-detail/characters-detail.component.html
+++ b/src/app/pages/home/characters-detail/characters-detail.component.html
@@ -1,11 +1,13 @@
 <mat-drawer-container class="characters-detail-container">
   <mat-drawer mode="side" opened position="end" class="characters-detail-drawer">
     <div class="characters-detail-drawer-content">
-      <img src="https://placehold.co/200x300" alt="character-image" class="characters-detail-drawer-image" />
+      @if (character) {
+      <img [src]="character.image" alt="character-image" class="characters-detail-drawer-image" />
       <div class="characters-detail-drawer-info">
-        <h3 class="characters-detail-drawer-name">Name</h3>
+        <h3 class="characters-detail-drawer-name">{{ character.name }}</h3>
         <p class="characters-detail-drawer-description">Description</p>
       </div>
+      }
     </div>
   </mat-drawer>
 </mat-drawer-container>
