--- a/src/app/pages/home/characters-detail/characters-detail.component.html
+++ b/src/app/pages/home/characters-detail/characters-detail.component.html
@@ -14,12 +14,17 @@
           <strong>Another resident of {{ character.location.name }} :</strong>
           {{ resident$ | async }}
         </p>
-        <p class="character-detail-description">
-          <strong>First appearance:</strong> {{ character!.episode[0] || 'No episode' }}
-        </p>
-        <p class="character-detail-description">
-          <strong>Another character in episode:</strong> {{ episodeCharacter$ | async }}
-        </p>
+        <div class="episode-info">
+          <h3>First Appearance</h3>
+          @if (episodeInfo$ | async; as episode) {
+          <p class="character-detail-description"><strong>Episode:</strong> {{ episode.episode }}</p>
+          <p class="character-detail-description"><strong>Name:</strong> {{ episode.name }}</p>
+          <p class="character-detail-description"><strong>Air Date:</strong> {{ episode.air_date }}</p>
+          <p class="character-detail-description">
+            <strong>Another character in episode:</strong> {{ episodeCharacter$ | async }}
+          </p>
+          }
+        </div>
       </div>
     </div>
   </div>
