added select character from favorites

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,11 +1,11 @@
 <div class="layout">
   <div class="background-container"></div>
   <div class="header-container">
-    <app-header></app-header>
+    <app-header (favoriteSelected)="home.onCharacterSelected($event)"></app-header>
   </div>
 
   <div class="content-container">
-    <router-outlet></router-outlet>
+    <app-home #home></app-home>
   </div>
 
   <div class="footer-container">
