--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,8 +1,7 @@
 <div class="footer">
-  <a href="https://status.rickandmortyapi.com/" target="_blank" class="server-status-link">
-    <div class="server-status">
-      <p>Rick and Morty API Server Status</p>
-      <span class="status"></span>
+  <a href="https://rickandmortyapi.com/" target="_blank" class="server-status-link">
+    <div class="api-link">
+      <p>Rick and Morty API</p>
     </div>
   </a>
 
