--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ body {
   box-sizing: border-box;
 }
 body {
-  margin: 0;
+  margin: 0 auto;
   background-color: black;
   font-family: 'Roboto', sans-serif;
   color: white;
