--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,8 +1,6 @@
 <div class="footer">
-  <a href="https://rickandmortyapi.com/" target="_blank" class="server-status-link">
-    <div class="api-link">
-      <p>Rick and Morty API</p>
-    </div>
+  <a href="https://rickandmortyapi.com/" target="_blank" class="api-link">
+    <p>Rick and Morty API</p>
   </a>
 
   <div class="total-characters">
